# ssalmuk-agent

./: .gitignore  README.md  README_ko.md  pyproject.toml  spec.md
configs/examples/: local_settings_example.yaml  providers_example.yaml  risk_keywords_example.yaml
docs/: setup.md
internal/agents/: coder.py  reviewer.py
internal/agents/adapter/: __init__.py  codex_provider.py  google_provider.py  local_provider.py  provider_client.py  registry.py
internal/schemas/: state.py
internal/tools/: artifacts.py  patch.py  policy_gate.py  risk_scan.py  runner.py  shell.py  test_plan.py  tracing.py
my_opt_code_agent/: __init__.py  __main__.py  cli.py
scripts/: bootstrap_venv.ps1  bootstrap_venv.sh
tests/: test_hitl_interactive.py  test_phase0_smoke.py  test_risk_scan_policy.py  test_shell_run_cli.py
